--- a/jenkinsfile
+++ b/jenkinsfile
@@ -19,7 +19,7 @@ pipeline{
         stage("Build Docker Image"){
             steps{
                 script{
-                    dir("${CODE_DIRECTORY}"){
+                    dir("${CODE_DIR}"){
                         sh "docker build -t ${IMAGE_NAME}:${IMAGE_TAG} ."
                     }
                 }
